--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "cheerio": "^1.0.0-rc.12",
+    "next": "14.2.2",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
-    "next": "14.2.2"
+    "react-native-html-parser": "^0.1.0",
+    "react-slideshow-image": "^4.3.1"
   },
   "devDependencies": {
     "postcss": "^8",
