--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-native-html-parser": "^0.1.0",
     "react-router-dom": "^6.25.1",
